--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,13 +8,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/">Shipped</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-right" id="navbar-collapsible-content">
       <ul class="nav navbar-nav ">
         <% if user_signed_in? %>
+          <li class="mobile-menu">
+            <%= link_to 'Users', schedules_path%>
+          </li>
+          <li class="mobile-menu">
+            <%= link_to 'Boats', schedules_path%>
+          </li>
+          <li class="mobile-menu">
+            <%= link_to 'Job Listings', schedules_path%>
+          </li>
+
           <li class="dropdown pc-menu">
             <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
               <span id="user-name"><%= current_user.name %></span>
@@ -25,13 +35,6 @@
               <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             </ul>
-          </li>
-
-          <li class="mobile-menu">
-            <%= link_to 'Edit Profile', edit_user_registration_path %>
-          </li>
-          <li class="mobile-menu">
-            <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
           </li>
 
         <% else # user not signed it %>
