--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Boats#index</h1>
-<p>Find me in app/views/boats/index.html.erb</p>
+<h1>List of all Boats</h1>
+
+<%= @boats.each do |b| %>
+	<%= link_to b.name, b %>
+
+	<% end %>
