nav links now go to the respective index pages

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,13 +16,13 @@
       <ul class="nav navbar-nav ">
         <% if user_signed_in? %>
           <li class="mobile-menu">
-            <%= link_to 'Users', schedules_path%>
+            <%= link_to 'Users', users_path%>
           </li>
           <li class="mobile-menu">
-            <%= link_to 'Boats', schedules_path%>
+            <%= link_to 'Boats', boats_path%>
           </li>
           <li class="mobile-menu">
-            <%= link_to 'Job Listings', schedules_path%>
+            <%= link_to 'Job Listings', jobs_path%>
           </li>
 
           <li class="dropdown pc-menu">
