show listing of all jobs is now working

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,12 +2,12 @@
 
 
  <% @job.each do |j| %>
-Job# <%= j.id %> </a><br>
-Description: <%= j.description %><br>
-Cost: <%= j.cost %><br>
-How many Containers Needed: <%= j.containers_needed %><br>
-Boat ID: <%= j.boat_id %><br>
-User ID: <%= j.user_id %>
+<b>Job#</b> <%= j.id %> </a><br>
+<b>Description:</b> <%= j.description %><br>
+<b>Cost:</b> <%= j.cost %><br>
+<b>How many Containers Needed:</b> <%= j.containers_needed %><br>
+<b>Boat ID:</b> <%= j.boat_id %><br>
+<b>User ID:</b> <%= j.user_id %>
  <br>
  <hr>
 
