edit fucntion for jobs is now working

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,8 @@
 <b>Cost:</b> <%= j.cost %><br>
 <b>How many Containers Needed:</b> <%= j.containers_needed %><br>
 <b>Boat ID:</b> <%= j.boat_id %><br>
-<b>User ID:</b> <%= j.user_id %>
+<b>User ID:</b> <%= j.user_id %><br>
+<a href="/jobs/<%= j.id %>/edit"><b>Edit Job</b></a>
  <br>
  <hr>
 
