--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,11 +18,29 @@
           <li class="mobile-menu">
             <%= link_to 'Users', users_path%>
           </li>
-          <li class="mobile-menu">
-            <%= link_to 'Boats', boats_path%>
+
+          <li class="dropdown pc-menu">
+            <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <span id="user-name">Boats</span>
+              <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Boat List', boats_path%></li>
+              <li><%= link_to 'New Boat', new_boat_path %></li>
+            </ul>
           </li>
-          <li class="mobile-menu">
-            <%= link_to 'Job Listings', jobs_path%>
+
+          <li class="dropdown pc-menu">
+            <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <span id="user-name">Work</span>
+              <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Job Listings', jobs_path %></li>
+              <li><%= link_to 'New Work Post', new_job_path %></li>
+            </ul>
           </li>
 
           <li class="dropdown pc-menu">
