removed boat option from new job, it will be a choice when you schdule a job

--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -4,6 +4,6 @@
  How Many Containers Needed: <%= f.text_field :containers_needed %><br>
  How Much will it Cost $<%= f.text_field :cost %><br>
  Description of the Job: <%= f.text_area :description %><br>
- List of Boats <%= f.select :boat_id, options_from_collection_for_select( @boats, "id", "name") %><br>
+ <!-- List of Boats <%#= f.select :boat_id, options_from_collection_for_select( @boats, "id", "name") %><br> -->
  <%= f.submit "Update Job" %>
  <% end %>
