--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,7 +8,8 @@
 <b>How many Containers Needed:</b> <%= j.containers_needed %><br>
 <b>Boat ID:</b> <%= j.boat_id %><br>
 <b>User ID:</b> <%= j.user_id %><br>
-<a href="/jobs/<%= j.id %>/edit"><b>Edit Job</b></a>
+<a href="/jobs/<%= j.id %>/edit"><b>Edit Job</b></a><br>
+<a href="/jobs/<%= j.id %>"><b>Schedule Job</b></a>
  <br>
  <hr>
 <% end %>
