--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Schedule#new</h1>
-<p>Find me in app/views/schedule/new.html.erb</p>
+<h1>Schedule Your Boat</h1>
+
+<%= form_for @ do |f| %>
+ Origin: <%= f.text_field :origin %><br>
+ Destiation: $<%= f.text_field :destination %><br>
+Date: <%= f.datetime_field :date %>
+ Choose Your Boat <%= f.select :boat_id, options_from_collection_for_select( @boats, "id", "name") %><br>
+ <%= f.submit "Create A Job" %>
+<% end %>
