when look at listing of jobs, you can schedule job

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -6,6 +6,6 @@
  Destiation: <%= f.text_field :destination %><br>
  Date: <%= f.datetime_field :date %><br>
  Choose Your Boat <%= f.select :boat_id, options_from_collection_for_select( @boats, "id", "name") %><br>
- <%= hidden_field_tag "job_id", @job.id %>
+ <%= hidden_field_tag "job_id", @job.id %><br>
  <%= f.submit "Create A Job" %>
  <% end %>	
