edited user show page and routing

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,10 @@
-<%   @users.each do |f| %>
-<%= f.name %>
-<%= f.email %>
+<h1>List of All Users</h1>
+
+<% @users.each do |u| %>
+<div class="">
+  <div><a href='/users/<%= u.id %>'><%= u.name  %></a></div>
+</div>
+<div class="">
+  <%= u.email %>
+</div>
 <% end %>
