--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><strong><%= @user.name%>'s Profile</strong></h1>
+<h5><%= @user.email%></h5>
+<br>
+
+<h4>Boats Owned</h4>
+<% boats = @user.boats %>
+<% boats.each do |b| %>
+  <div class="">
+    <strong>Name: </strong><%= b.name %>
+  </div>
+  <div class="">
+    <strong>Location: </strong><%= b.location %>
+  </div>
+  <div class="">
+    <strong># of Containers: </strong><%= b.containers %>
+  </div>
+  <br>
+<% end %>
