got jobs to display on individual boat show pages

--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Boats#show</h1>
-<p>Find me in app/views/boats/show.html.erb</p>
+<div><h1><strong><%= @boat.name%></strong></h1></div>
+<div>Owned by: <%= @boat.user.name %></div>
+<br>
+
+<div class="">
+  <h5>Job List</h5>
+</div>
+<% jobs = @boat.jobs %>
+<% jobs.each do |j| %>
+  <div class="">
+    <strong>Description: </strong><%= j.description %>
+  </div>
+  <div class="">
+    <strong>Cost: $</strong><%= j.cost%>
+  </div>
+  <div class="">
+    <strong>Containers Needed: </strong><%= j.containers_needed %>
+  </div>
+  <br>
+<%end%>
