--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,4 +15,6 @@
     <strong># of Containers: </strong><%= b.containers %>
   </div>
   <br>
+
+  <div><%= image_tag b.image.url(:medium) %></div>
 <% end %>
