--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -17,13 +17,13 @@
 </div>
 
 <div class='field'>
-<%= f.label :title %><br>
-<%= f.text_field :title %>
+<%= f.label :name %><br>
+<%= f.text_field :name %>
 </div>
 
 <div class='field'>
-	<%= f.label :content %><br>
-	<%= f.text_area :content %>
+	<%= f.label :location %><br>
+	<%= f.text_area :name %>
 </div>
 <div class='actions'>
 <%= f.submit %>	
