--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -6,3 +6,36 @@
 	# of containers<%= b.text_field :containers %><br>
 	<%= b.submit 'Create boat' %>
 	<% end %>
+
+	<%= form_for @boat, html: {multipart: true} do |f| %>
+<% if @boat.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@boat.errors.count, 'error') %> prohibited this post from being saved:</h2>
+
+	<ul>
+		<% @boat.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
+
+<div class='field'>
+	<%= f.label :image %><br>
+	<%= f.file_field :image %>
+</div>
+
+<div class='field'>
+<%= f.label :name %><br>
+<%= f.text_field :name %>
+</div>
+
+<div class='field'>
+	<%= f.label :location %><br>
+	<%= f.text_area :name %>
+</div>
+<div class='actions'>
+<%= f.submit %>	
+</div>
+<% end %>
+
