--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -32,3 +32,9 @@ a:hover, a:active, a:link, a:visited {
 .control-label {
   display: none;
 }
+
+.thumb_image {
+  position: relative;
+  left: 200px;
+  bottom: 120px;
+}
