--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -5,4 +5,5 @@
 	<div><strong>Owner:</strong> <%= b.user.name %></div>
 	<div><strong>Boat location:</strong> <%=  b.location %></div>
 	<div><strong>Number of containers:</strong> <%=  b.containers %></div><br>
+	<div class='thumb_image'><%= image_tag b.image.url(:thumb) %></div><br>
 	<% end %>
