--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -4,6 +4,7 @@
   <div class=""><strong>Date: </strong><%= s.date %></div>
   <div class=""><strong>Origin: </strong><%= s.origin %></div>
   <div class=""><strong>Destination: </strong><%= s.destination %></div>
+  <%= link_to "Delete", schedule_path(s.id), method: :delete, data: {confirm: "Job Complete, Remove from Schedule?"}  %> 
 
   <br>
   <% this_name = User.find(s.job.user_id) %>
