--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,6 @@
   <div><a href='/users/<%= u.id %>'><%= u.name  %></a></div>
 </div>
 <div class="">
-  <%= u.email %>
+  <%= u.email %><hr>
 </div>
 <% end %>
