--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
     <strong># of Containers: </strong><%= b.containers %>
   </div>
   <br>
-  
+      <!-- if image gets an error -->
   <% if b.image.url != "/images/original/missing.png" %>
   <div><%= image_tag b.image.url(:medium) %></div>
   <% end %>
