some design added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= favicon_link_tag asset_path('anchor-wheel-icon.png'), :rel => 'icon', :type =>  'image/png' %>
   </head>
 
-  <body>
+  <body id='bodyBackgr'>
     <%= render 'layouts/navigation' %>
     <%= yield %>
   </body>
