last minute styling

--- a/app/assets/stylesheets/partials/schedule.scss
+++ b/app/assets/stylesheets/partials/schedule.scss
@@ -1,8 +1,8 @@
 .card {border: 2px solid silver;
       border-radius: 25px;
-      margin-left: 2px;
+      margin: 5px;
       float: left;
-      width: 25%;
+      width: 32%;
       color: white;
     background: rgba(191, 155, 128, 0.8);
     height: 300px;
