--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -19,7 +19,9 @@
       <div class="lineOnSchedule"><strong>Job: </strong><%= s.job.description %></div>
       <div class="lineOnSchedule"><strong>Poster: </strong><%= this_name.name %></div>
       <br>
-     <button class='btn btn-warning btn-sm'>  Remove </button>
+     <button class='btn btn-warning btn-sm'><%= link_to "Delete", schedule_path(s.id),
+             method: :delete,
+             data: {confirm: "Delete Job?"} %></button>
     </div>
   </div>
 
