--- a/app/assets/stylesheets/partials/users.scss
+++ b/app/assets/stylesheets/partials/users.scss
@@ -1,3 +1,4 @@
 #userIndexPage {border: 2px solid silver;
-                border-radius: 15px;}
-
+                border-radius: 15px;
+                float: left;
+              }
