--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,12 @@
 <div class='container'>
     <h1>List of All Users</h1>
       <div class="row">
-        <div id='userIndexPage' class="col-lg-3 col-md-6" >
+        <!-- <div id='userIndexPage' class="col-lg-3 col-md-6" > -->
           <% @users.each do |u| %>
+          <div id='userIndexPage' class="col-lg-3 col-md-6" >
           Name:  <div><b><a href='/users/<%= u.id %>'><%= u.name  %></a> </b></div>
           E-mail:  <div class=""><b><%= u.email %></b></div>
-        </div>
+          </div>
+          <% end %>
       </div>
 </div>
-<% end %>
