cleaned up jobs/schedules controller

--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for @ do |f| %>
  Origin: <%= f.text_field :origin %><br>
- Destiation: $<%= f.text_field :destination %><br>
-Date: <%= f.datetime_field :date %>
+ Destiation: <%= f.text_field :destination %><br>
+ Date: <%= f.datetime_field :date %>
  Choose Your Boat <%= f.select :boat_id, options_from_collection_for_select( @boats, "id", "name") %><br>
  <%= f.submit "Create A Job" %>
 <% end %>
